fix map size on mobile

--- a/scss/layouts/_map.scss
+++ b/scss/layouts/_map.scss
@@ -16,3 +16,7 @@
     top: 0;
   }
 }
+
+.mapboxgl-canvas-container {
+  height: 100vh;
+}
